[gd_scene load_steps=7 format=3 uid="uid://dkn378a85fyv3"]

[ext_resource type="Script" path="res://src/scenes/plants/crawler/crawler.gd" id="1_slgqw"]
[ext_resource type="PackedScene" uid="uid://bgk88yp1g50m0" path="res://src/scenes/hitbox/hitbox.tscn" id="2_g4gvd"]
[ext_resource type="PackedScene" uid="uid://dxebldut1vkpi" path="res://src/scenes/IA/IA_agent.tscn" id="3_6rl0y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5qxdk"]
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g8fp8"]
height = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_cql7f"]
radius = 12.3111

[node name="crawler" type="CharacterBody3D"]
script = ExtResource("1_slgqw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500116, 0)
shape = SubResource("CapsuleShape3D_5qxdk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.500116, 0)
mesh = SubResource("CapsuleMesh_g8fp8")

[node name="hitbox" parent="." instance=ExtResource("2_g4gvd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.591851, 0)
HP = 100.0

[node name="AI_agent" parent="." instance=ExtResource("3_6rl0y")]

[node name="Action_timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="detection_range" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="detection_range"]
shape = SubResource("SphereShape3D_cql7f")

[connection signal="timeout" from="Action_timer" to="." method="_on_action_timer_timeout"]
